minor transparency corrections

--- a/conky.conf
+++ b/conky.conf
@@ -11,6 +11,7 @@ conky.config = {
   background = true,
   border_width = 0,
   border_inner_margin = 10,
+  border_outer_margin = 0,
   gap_x = 1730,
   gap_y = 32,
   minimum_width = 180,
