--- a/conky_gallery.conf
+++ b/conky_gallery.conf
@@ -7,6 +7,7 @@ conky.config = {
   background = true,
   border_width = 0,
   border_inner_margin = 0,
+  border_outer_margin = 0,
   gap_x = 1730,
   gap_y = 334,
   minimum_width = 180,
@@ -25,7 +26,7 @@ conky.config = {
   extra_newline = false,
 
   own_window = true,
-  own_window_transparent = true,
+  own_window_transparent = false,
   own_window_argb_visual = true,
   own_window_argb_value = 255,
   own_window_class = 'Conky',
