listfile gets populated _after_ feh is closed

--- a/conky_gallery.conf
+++ b/conky_gallery.conf
@@ -32,6 +32,7 @@ conky.config = {
   own_window_class = 'Conky',
   own_window_type = 'panel',
   own_window_title = 'hidden_conky_gallery',
+  own_window_hints = 'above',
 
   disable_auto_reload = true,
 
