path removed from conky.conf

--- a/conky_gallery.conf
+++ b/conky_gallery.conf
@@ -47,6 +47,6 @@ conky.config = {
 }
 
 conky.text = [[
-${execi $template0 ~/conky-sidebar/gallery_get_random_image.sh}\
-${image ~/conky-sidebar/cache/gallery.png -p 0,0 -s 180x135}\
+${execi $template0 ./gallery_get_random_image.sh}\
+${image ./cache/gallery.png -p 0,0 -s 180x135}\
 ]]
