--- a/conky.conf
+++ b/conky.conf
@@ -53,8 +53,8 @@ conky.text = [[
 #    refresh image gallery image
 #
 ###
-${texeci 300 ~/conky-sidebar/owmgetjson.sh weather}\
-${texeci 10800 ~/conky-sidebar/owmgetjson.sh forecast}\
+${texeci 300 ./owmgetjson.sh weather}\
+${texeci 10800 ./owmgetjson.sh forecast}\
 ###
 #
 #    date and time
@@ -68,12 +68,12 @@ ${hr 2}
 #
 ###
 ${voffset 10}\
-${goto 20}${font Weather Icons:size=40}${execi 2 ~/conky-sidebar/owmreaddata.sh icon_now}
-#${goto 20}${font Weather Icons:size=40}${execi 2 ~/conky-sidebar/owm2utf8.sh wi_owm_night_901}
+${goto 20}${font Weather Icons:size=40}${execi 2 ./owmreaddata.sh icon_now}
+#${goto 20}${font Weather Icons:size=40}${execi 2 ./owm2utf8.sh wi_owm_night_901}
 ${voffset -90}\
-${alignr}${font DejaVu Sans Mono:size=28}${execi 60 ~/conky-sidebar/owmreaddata.sh temp_now}°
+${alignr}${font DejaVu Sans Mono:size=28}${execi 60 ./owmreaddata.sh temp_now}°
 ${voffset 3}\
-${alignr 8}$font${execi 60 ~/conky-sidebar/owmreaddata.sh description}
+${alignr 8}$font${execi 60 ./owmreaddata.sh description}
 ###
 #
 #    other weather information of today
@@ -82,17 +82,17 @@ ${alignr 8}$font${execi 60 ~/conky-sidebar/owmreaddata.sh description}
 ${voffset 2}\
 $hr
 ${voffset 3}\
-${goto 20}${font Weather Icons:size=12}${execi 60 ~/conky-sidebar/owmreaddata.sh wind_degree_icon}\
-${alignr 102}$font${execi 60 ~/conky-sidebar/owmreaddata.sh wind_speed} km/h
+${goto 20}${font Weather Icons:size=12}${execi 60 ./owmreaddata.sh wind_degree_icon}\
+${alignr 102}$font${execi 60 ./owmreaddata.sh wind_speed} km/h
 ${voffset -21}\
-${goto 120}${font Weather Icons:size=12}${execi 60 ~/conky-sidebar/owm2utf8.sh wi_thermometer}\
-${alignr 2}$font${execi 60 ~/conky-sidebar/owmreaddata.sh temp_min 0}°/${execi 60 ~/conky-sidebar/owmreaddata.sh temp_max 0}°
+${goto 120}${font Weather Icons:size=12}${execi 60 ./owm2utf8.sh wi_thermometer}\
+${alignr 2}$font${execi 60 ./owmreaddata.sh temp_min 0}°/${execi 60 ./owmreaddata.sh temp_max 0}°
 ${voffset 4}\
-${goto 20}${font Weather Icons:size=12}${execi 60 ~/conky-sidebar/owm2utf8.sh wi_barometer}\
-${alignr 102}$font${execi 60 ~/conky-sidebar/owmreaddata.sh pressure} mb
+${goto 20}${font Weather Icons:size=12}${execi 60 ./owm2utf8.sh wi_barometer}\
+${alignr 102}$font${execi 60 ./owmreaddata.sh pressure} mb
 ${voffset -21}\
-${goto 120}${font Weather Icons:size=12}${execi 60 ~/conky-sidebar/owm2utf8.sh wi_humidity}\
-${alignr 2}$font${execi 60 ~/conky-sidebar/owmreaddata.sh humidity}%
+${goto 120}${font Weather Icons:size=12}${execi 60 ./owm2utf8.sh wi_humidity}\
+${alignr 2}$font${execi 60 ./owmreaddata.sh humidity}%
 ${voffset 2}\
 $hr
 ###
@@ -102,24 +102,24 @@ $hr
 ###
 ${font DejaVu Sans Mono:bold:size=10}\
 ${voffset 3}\
-${alignc 66}${execi 60 ~/conky-sidebar/owmreaddata.sh day 1}
+${alignc 66}${execi 60 ./owmreaddata.sh day 1}
 ${voffset -15}\
-${alignc}${execi 60 ~/conky-sidebar/owmreaddata.sh day 2}
+${alignc}${execi 60 ./owmreaddata.sh day 2}
 ${voffset -15}\
-${alignc -66}${execi 60 ~/conky-sidebar/owmreaddata.sh day 3}
+${alignc -66}${execi 60 ./owmreaddata.sh day 3}
 ${voffset -15}
-${alignc 66}${font Weather Icons:size=16}${execi 60 ~/conky-sidebar/owmreaddata.sh icon 1}
+${alignc 66}${font Weather Icons:size=16}${execi 60 ./owmreaddata.sh icon 1}
 ${voffset -30}\
-${alignc}${font Weather Icons:size=16}${execi 60 ~/conky-sidebar/owmreaddata.sh icon 2}
+${alignc}${font Weather Icons:size=16}${execi 60 ./owmreaddata.sh icon 2}
 ${voffset -30}\
-${alignc -66}${font Weather Icons:size=16}${execi 60 ~/conky-sidebar/owmreaddata.sh icon 3}
+${alignc -66}${font Weather Icons:size=16}${execi 60 ./owmreaddata.sh icon 3}
 $font\
 ${voffset -8}\
-${goto 12}${execi 60 ~/conky-sidebar/owmreaddata.sh temp_min 1}°/${execi 60 ~/conky-sidebar/owmreaddata.sh temp_max 1}°
+${goto 12}${execi 60 ./owmreaddata.sh temp_min 1}°/${execi 60 ./owmreaddata.sh temp_max 1}°
 ${voffset -13}\
-${alignc -2}${execi 60 ~/conky-sidebar/owmreaddata.sh temp_min 2}°/${execi 60 ~/conky-sidebar/owmreaddata.sh temp_max 2}°
+${alignc -2}${execi 60 ./owmreaddata.sh temp_min 2}°/${execi 60 ./owmreaddata.sh temp_max 2}°
 ${voffset -13}\
-${alignr}${execi 60 ~/conky-sidebar/owmreaddata.sh temp_min 3}°/${execi 60 ~/conky-sidebar/owmreaddata.sh temp_max 3}°
+${alignr}${execi 60 ./owmreaddata.sh temp_min 3}°/${execi 60 ./owmreaddata.sh temp_max 3}°
 ${voffset 2}$font\
 ${hr 2}
 ###
